--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <script src="./login.js" defer></script>
     <title>Document</title>
   </head>
   <body>
@@ -17,7 +18,7 @@
           placeholder="전화번호, 사용자 이름 또는 이메일"
         />
         <input class="login-password" type="password" placeholder="비밀번호" />
-        <button class="login-button">로그인</button>
+        <button class="login-button" disabled>로그인</button>
       </form>
       <a class="find" href="#">비밀번호를 잊으셨나요?</a>
     </div>
