center alignment navbar

--- a/main.html
+++ b/main.html
@@ -21,7 +21,9 @@
           <div class="vertical-bar"></div>
           <span class="nav-bar__title">Westagram</span>
         </div>
-        <input type="text" class="search-bar" placeholder="🔍 검색" />
+        <div class="nav-bar__center">
+          <input type="text" class="search-bar" placeholder="🔍 검색" />
+        </div>
         <div class="nav-bar__right">
           <button class="nav-bar__compass">
             <img
